--- a/amazon-clone/src/Header.css
+++ b/amazon-clone/src/Header.css
@@ -1,5 +1,7 @@
 .header{
   background-color: #131921;
+  display:flex;
+  align-items: center;
 }
 
 .header_logo{
@@ -7,5 +9,39 @@
   margin-top:18px;
   margin-right:20px;
   margin-left:20px;
+  object-fit:contain;
 
+}
+
+.header_search{
+  display:flex;
+  flex:1;
+}
+
+.header_nav{
+  display:flex;
+  justify-content:space-evenly;
+}
+
+.header_option{
+  display:flex;
+  flex-direction: column;
+}
+
+.header_link{
+  color:white;
+  text-decoration:none;
+}
+
+.header_searchInput{
+  height : 12px;
+  padding:10px;
+  border:none;
+  width:100%;
+}
+
+.header_searchIcon {
+  background-color:orange;
+  padding:5px;
+  height:22px !important;
 }
